fix resize on mobile when focus textarea

--- a/views/assets/app.css
+++ b/views/assets/app.css
@@ -77,6 +77,11 @@ input[type=checkbox] {
     body {
         font-size: 200%;
     }
+    .input-box textarea{
+        max-width:100%;
+        font-size: 16px;
+        height: 300px;
+    }
     .input-text {
         width: 90%;
     } 
